[workspace]
members = [
    "crates/rpcedge-relay-client",
    "crates/rpcedge-relay-protocol",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/rpc-edge/rpcedge-relay-client"
rust-version = "1.86"

[workspace.dependencies]
base64 = "0.22"
httpmock = "0.7"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
