[package]
name = "rpcedge-relay-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rpcedge-relay-protocol = { path = "../rpcedge-relay-protocol" }
serde_json.workspace = true
thiserror.workspace = true
