[package]
name = "rpcedge-relay-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rpcedge-relay-protocol = { path = "../rpcedge-relay-protocol" }
quinn.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
rustls.workspace = true
rustls-pki-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio.workspace = true
